@@ -23,7 +23,7 @@
 <h2>Application Categories</h2>
 <p>
       As of the last update, there are a total of
-      <em>142</em>
+      <em>143</em>
       speech-enabled applications 
       in <em>14</em> categories
       on the Emacspeak audio desktop.
@@ -69,7 +69,7 @@
             (18)
           </a></li>
 <li><a href="#Distractions">DISTRACTIONS 
-            (4)
+            (5)
           </a></li>
 </ol>
 <table>
@@ -1167,7 +1167,7 @@
     </td>
 </tr>
 <tr><td colspan="3"><a name="Distractions" id="Distractions">DISTRACTIONS     
-          (4)
+          (5)
       </a></td></tr>
 <tr>
 <td>1</td>
@@ -1180,20 +1180,27 @@
 </tr>
 <tr>
 <td>2</td>
+<td><a id="sudoku">sudoku</a></td>
+<td>
+      Speech-enabled access to SuDoku --- the number placement game.
+    </td>
+</tr>
+<tr>
+<td>3</td>
 <td><a id="gomoku">gomoku</a></td>
 <td>
       Speech-enabled version of the traditional board game.
     </td>
 </tr>
 <tr>
-<td>3</td>
+<td>4</td>
 <td><a id="solitaire">solitaire</a></td>
 <td>
       Speech-enabled version of the traditional board game.
     </td>
 </tr>
 <tr>
-<td>4</td>
+<td>5</td>
 <td><a id="tetris">tetris</a></td>
 <td>
       Speech-enabled version of Tetris with auditory icons and the
